--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,29 @@ html {
 }
 
 body {
-  font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 
-              Roboto, 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'EculidMedium', sans-serif;
   line-height: 1.6;
   color: #1f2937;
   background-color: #ffffff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-smoothing: antialiased;
+
+  font-size: 16px;
+  overflow-x: hidden;
+  
+}
+@font-face {
+  font-family: EculidMedium;
+  src: url(./assets//fonts/Euclid\ Circular\ A\ Medium.ttf);
+}
+@font-face {
+  font-family: EculidBold;
+  src: url(./assets//fonts/Euclid\ Circular\ A\ Bold.ttf);
+}
+@font-face {
+  font-family: EculidsemiBold;
+  src: url(./assets//fonts/Euclid\ Circular\ A\ SemiBold.ttf);
 }
 
 img,
